app/assets/stylesheets/activities.css.scss
.activities-list {
  .list-item {

    &.small .item { width: 570px; }

    .trackable { font-weight: bold; }

    &.user {
      .item-avatar { background-color: $meppit-dark-green; }
      .trackable { color: $meppit-dark-green; }
    }

    &.geo_data {
      .trackable { color: $meppit-data-color; }
    }

    &.map {
      .trackable { color: $meppit-maps-color; }
    }
  }

  .event-type {
    font-weight: bold;
  }

  .activity-event {
    display: inline-block;
  }

  .activity-time {
    display: inline-block;
    font-size: 0.8em;
    color: $grey;
    margin-left: 10px;
  }

  .activity-changes {
    margin-top: 5px;
    font-size: 0.9em;
    color: $grey;
  }
}

